# cxx-module-template

consumer/: CMakeLists.txt  main.cpp
package/: CMakeLists.txt  math.cppm  math.pc.in  mathConfig.cmake.in
package1/: CMakeLists.txt  math.pc.in  math2.cppm  mathConfig.cmake.in
package2/: CMakeLists.txt  copy.cppm  copy.pc.in  copyConfig.cmake.in
